# PloyAgent

./: .env.example  .env.production.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.aws.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
config/cross_venue/: team_aliases.yaml  world_cup_pairs.yaml
docs/: aws-hosting.md  cloudflare-private-dashboard.md  cross-venue-wc-games.md  cross-venue-world-cup.md  how-the-agent-works.md  local-monitoring.md  paper-trading.md  simple-vps-guide.md
docs/superpowers/specs/: 2026-05-25-strategy-profitability-design.md
infra/: README.md  docker-compose.yml
infra/aws/: cloud-init.sample.yaml  ssm-parameters.example
infra/cloudflared/: config.example.yml
scripts/: aws-bootstrap.sh  aws-deploy.sh  aws-ssm-pull-env.sh  aws-verify.sh  backfill_market_type.py  map-wc-games-cron.sh  restart-stack.sh  run-local-stack.sh  start_all.ps1  start_all.sh  stop-local-stack.sh  vps-deploy.sh
src/ploy_agent/: __init__.py
tests/: test_adaptive_edge.py  test_book_imbalance.py  test_book_math.py  test_confidence.py  test_consensus.py  test_cross_venue_arb.py  test_decay.py  test_enrichment_scoreboard.py  test_explanations.py  test_gamma_discovery.py  test_kalshi_ingest.py  test_kalshi_pairs.py  test_kelly.py  test_model.py  test_notifier_slack.py  test_odds_math.py  test_odds_sports.py  test_registry.py  test_resolution.py  test_scoring.py  test_sim_performance.py  test_sim_pnl.py  test_sim_portfolio.py  test_sim_rules.py  test_sim_tracker.py  test_wc_game_mapper.py  test_web_recommendations.py
(+95 files in other folders)
