[project]
name = "ploy-agent"
version = "0.1.0"
description = "Polymarket Edge Agent v0 — NBA in-game ingestion, enrichment, reasoning, web UI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "certifi>=2024",
  "truststore>=0.9",
  "httpx>=0.27",
  "websockets>=13",
  "asyncpg>=0.29",
  "pydantic>=2",
  "pydantic-settings>=2",
  "anthropic>=0.40",
  "jinja2>=3.1",
  "fastapi>=0.115",
  "uvicorn>=0.32",
  "numpy>=2",
  "scikit-learn>=1.5",
  "streamlit>=1.40",
  "structlog>=24",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "ruff>=0.8"]

[project.scripts]
ploy-ingest = "ploy_agent.ingestion.__main__:main"
ploy-enrich = "ploy_agent.enrichment.__main__:main"
ploy-reason = "ploy_agent.reasoning.__main__:main"
ploy-notify = "ploy_agent.notifier.__main__:main"
ploy-web = "ploy_agent.web.app:run"
ploy-slack-events = "ploy_agent.notifier.slack_events:run"
ploy-backtest = "ploy_agent.backtest.__main__:main"
ploy-migrate = "ploy_agent.db.migrate:main"
ploy-train-model = "ploy_agent.reasoning.train_model:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ploy_agent = ["reasoning/*.json", "db/migrations/*.sql", "web/templates/*.html"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
